tests/errors/lifetime/loan/enum_wrap_of_borrower_keeps_loan_active.sim

        enum Wrap: Move { W: &mut i64 }
        extern fn take_wrap(w: Wrap);
        fn f(x: i64) {
          r: &mut i64;
          w: Wrap;
          entry:
            r = &mut x;
            w = Wrap::W(move r);
            x = 7;
            call take_wrap(move w);
            return
        }
        